	  faster initialization and much shorter startup times. 
	- Driver: fixed a bug in the bulk and interrupt functions which caused
	  a BSOD under some very rare conditions.
	- Improved installer/uninstaller speed.
	- Added Cygwin support. The whole package can now be build under 
	  Cygwin and the latest MSys/MinGW.
	- DLL: improved error handling (function return values).
	- Installer: fixed minor bug.
	- Driver: improved hotplug behavior.
	- Driver: improved usb_reset().
	- DLL: fixed bug in initialization code.

Version 0.1.8.0:
	
	- Ported version 0.1.8.0 of libusb to libusb-win32 
	- Filter driver: fixed two bugs which caused BSODs on some systems
	  during powerdown and device removal.
	- Filter driver: fixed bug in composite device handling code.
	- Services: added better handling of composite devices. These devices
	  now appear as one single device instead of multiple devices for
	  each interface.
	- Sample inf-file: renamed to libusb.inf.
	- Sample inf-file: added better support for composite devices
	- Sample inf-file: included direct support for the Dakota and Walgreens
	  digital cameras.
	- Installer: improved installation speed.


Version 0.1.7.10:

	- DLL: fixed bug which caused the device detection to fail on some 
	  systems.
	- Filter driver: PNP and power management code improved. This will 
	  hopefully remove the shutdown and hibernation problems reported by
	  some users an XP systems.
	- The binary package distributions has been split up into two parts:
	  Filter driver and device driver. An user friendly GUI installer has
	  been added for the filter driver. The device driver (stub driver)
	  doesn't need the filter driver to be installed any more.
	- Filter driver: the filter driver is now installed in a different way
	  which will now allow access to all USB devices which weren't
	  accessible in the past (mice, scanners, etc.). A Windows system 
	  service (daemon) has been added to achive this.

 
Version 0.1.7.9:
